grammar.js
    script_file: ($) => optional($._separated_statements),

    _separated_statements: ($) =>
      repeat1(seq(optional($._statement), $._cmd_separator)),

    _statement: ($) =>
      seq(
        repeat(":"),
        choice(
          $.function_definition,
          $.let_statement,
          $.unlet_statement,
          $.const_statement,
          $.set_statement,
          $.setlocal_statement,
          $.return_statement,
          $.normal_statement,
          $.while_loop,
          $.for_loop,
          $.if_statement,
          $.lua_statement,
          $.range_statement,
          $.ruby_statement,
          $.python_statement,
          $.perl_statement,
          $.call_statement,
          $.execute_statement,
          $.echo_statement,
          $.echon_statement,
          $.echohl_statement,
          $.echomsg_statement,
          $.echoerr_statement,
          $.try_statement,
          $.throw_statement,
          $.autocmd_statement,
          $.silent_statement,
          $.register_statement,
          $.map_statement,
          $.augroup_statement,
          $.bang_filter_statement,
          $.highlight_statement,
          $.syntax_statement,
          $.setfiletype_statement,
          $.options_statement,
          $.startinsert_statement,
          $.stopinsert_statement,
          $.scriptencoding_statement,
          $.source_statement,
          $.global_statement,
          $.colorscheme_statement,
          $.command_statement,
          $.comclear_statement,
          $.delcommand_statement,
          $.filetype_statement,
          $.runtime_statement,
          $.wincmd_statement,
          $.sign_statement,
          $.break_statement,
          $.continue_statement,
          $.cnext_statement,
          $.cprevious_statement,
          $.unknown_builtin_statement,
          $.user_command
        )
      ),

    command_name: ($) => /[A-Z][A-Za-z0-9]*/,

    _command_attribute_completion_behavior: ($) =>
      choice(
        ...[
          "arglist",
          "augroup",
          "buffer",
          "behave",
          "color",
          "command",
          "compiler",
          "cscope",
          "dir",
          "environment",
          "even",
          "expression",
          "file",
          "file_in_path",
          "filetype",
          "function",
          "help",
          "highlight",
          "history",
          "local",
          "lua",
          "mapclear",
          "mapping",
          "menu",
          "messages",
          "option",
          "packadd",
          "shellcmd",
          "sign",
          "syntax",
          "syntime",
          "tag",
          "tag_listfiles",
          "user",
          "var",
        ].map(token.immediate),
        seq(token.immediate("custom"), token.immediate(","), $._ident),
        seq(token.immediate("customlist"), token.immediate(","), $._ident)
      ),
    _command_attribute_address_behavior: ($) =>
      choice(
        ...[
          "lines",
          "arguments",
          "buffers",
          "loaded_buffers",
          "windows",
          "tabs",
          "quickfix",
          "other",
        ].map(token.immediate)
      ),

    _command_attribute_nargs_value: ($) =>
      choice(
        alias(token.immediate(/[01]/), $.integer_literal),
        alias(token.immediate(/[*?+]/), $.pattern_multi)
      ),
    _command_attribute_range_value: ($) =>
      choice(
        alias(token.immediate(/[0-9]+/), $.integer_literal),
        alias(token.immediate("%"), $.pattern_multi)
      ),

    command_attribute: ($) =>
      choice(
        key_val_arg("-nargs", $._command_attribute_nargs_value),
        key_val_arg(
          "-complete",
          alias($._command_attribute_completion_behavior, $.behavior)
        ),
        key_val_arg("-range", $._command_attribute_range_value),
        key_val_arg("-range"),
        key_val_arg(
          "-count",
          alias(token.immediate(/[0-9]+/), $.integer_literal)
        ),
        key_val_arg("-count"),
        key_val_arg(
          "-addr",
          alias($._command_attribute_address_behavior, $.behavior)
        ),
        key_val_arg("-bang"),
        key_val_arg("-bar"),
        key_val_arg("-register"),
        key_val_arg("-buffer"),
        key_val_arg("-keepscript")
      ),
    command_statement: ($) =>
      seq(
        maybe_bang($, tokalias($, "command")),
        // `:command` alone list all user-defined command
        optional(
          choice(
            field("name", $.command_name),
            seq(
              repeat($.command_attribute),
              field("name", $.command_name),
              field("repl", alias($._statement, $.command))
            )
          )
        )
      ),

    _filetype_state: ($) => choice("on", "off"),
    filetype_statement: ($) =>
      seq(
        tokalias($, "filetype"),
        optional(
          choice(
            seq(
              optional("plugin"),
              optional("indent"),
              alias($._filetype_state, $.state)
            ),
            "detect"
          )
        )
      ),

    lua_statement: ($) => command($, "lua", choice($.chunk, $.script)),
    ruby_statement: ($) => command($, "ruby", choice($.chunk, $.script)),
    python_statement: ($) => command($, "python", choice($.chunk, $.script)),
    perl_statement: ($) => command($, "perl", choice($.chunk, $.script)),

    chunk: ($) => /<|(<[^\n<]|[^\s<])[^\n]*/,

    _heredoc_line: ($) => /[^\n]*\n/,

    script: ($) =>
      seq(
        "<<",
        choice(alias($._script_heredoc_marker, $.marker_definition), "\n"),
        alias(repeat($._heredoc_line), $.body),
        alias($._heredoc_end, $.endmarker)
      ),

    scoped_identifier: ($) => seq($.scope, $.identifier),

    _curly_braces_name_expression: ($) => seq("{", $._expression, "}"),
    _immediate_curly_braces_name_expression: ($) =>
      seq(token.immediate("{"), $._expression, "}"),
    identifier: ($) =>
      seq(
        choice(
          /[a-zA-Z_]+/,
          alias($._curly_braces_name_expression, $.curly_braces_name)
        ),
        repeat(
          choice(
            token.immediate(/(\w|#)+/),
            alias(
              $._immediate_curly_braces_name_expression,
              $.curly_braces_name
            )
          )
        )
      ),
    keyword: ($) => /[a-zA-Z_](\w|#)*/,

    _assignment_variable: ($) => choice($.identifier, $.scope_dict),

    _const_assignment: ($) =>
      seq(
        choice($._ident, $.list_assignment),
        choice(seq("=", $._expression), alias($._let_heredoc, $.heredoc))
      ),
    const_statement: ($) =>
      command(
        $,
        "const",
        choice($._const_assignment, repeat($._assignment_variable))
      ),

    option_name: ($) => choice(/[a-z]+/, seq("t_", /[a-zA-Z0-9]+/)),

    _set_option: ($) =>
      choice(
        "all",
        "all&",
        $.option_name,
        seq($.option_name, "?"),
        $.no_option,
        $.inv_option,
        $.default_option
      ),

    _set_rhs: ($) =>
      seq($._set_operator, optional(field("value", $.set_value))),

    set_item: ($) => seq(field("option", $._set_option), optional($._set_rhs)),

    set_statement: ($) => set_variant($, "set"),
    unlet_statement: ($) =>
      seq(maybe_bang($, tokalias($, "unlet")), repeat1($._expression)),

    call_statement: ($) => seq(tokalias($, "call"), $.call_expression),

    echo_statement: ($) => echo_variant($, "echo"),
    user_command: ($) =>
      seq(
        maybe_bang($, $.command_name),
        alias(repeat($.command_argument), $.arguments)
      ),

    command_argument: ($) => choice($.string_literal, /\S+/),

    at: ($) => "@",

    hl_group: ($) => /[a-zA-Z0-9_]+/,

    _syn_enable: ($) => sub_cmd(choice("enable", "on", "off", "reset")),

    _syn_case: ($) => sub_cmd("case", optional(choice("match", "ignore"))),

    _syn_spell: ($) =>
      sub_cmd("spell", optional(choice("toplevel", "notoplevel", "default"))),

    _syn_foldlevel: ($) =>
      sub_cmd("foldlevel", optional(choice("start", "minimum"))),

    _syn_iskeyword: ($) =>
      sub_cmd(
        "iskeyword",
        optional(choice("clear", alias(/[^ \n]+/, $.value)))
      ),

    _syn_conceal: ($) => sub_cmd("conceal", optional(choice("on", "off"))),

    // :h :syn-arguments

    _syn_keyword: ($) =>
      sub_cmd(
        "keyword",
        $.hl_group,
        repeat(alias($._syn_arguments_keyword, $.syntax_argument)),
        // The list of keyword cannot be empty, but we can have arguments anywhere on the line
        alias(/[a-zA-Z0-9\[\]_]+/, $.keyword),
        repeat(
          choice(
            alias($._syn_arguments_keyword, $.syntax_argument),
            alias(/[a-zA-Z0-9\[\]_]+/, $.keyword)
          )
        )
      ),

    _syn_match: ($) =>
      sub_cmd(
        "match",
        $.hl_group,
        repeat(alias($._syn_arguments_match, $.syntax_argument)),
        $._syn_hl_pattern,
        commaSep(alias($._syn_pattern_offset, $.pattern_offset)),
        repeat(alias($._syn_arguments_match, $.syntax_argument))
      ),

    _syn_region: ($) =>
      sub_cmd(
        "region",
        $.hl_group,
        repeat(alias($._syn_arguments_region, $.syntax_argument)),
        alias($._syn_region_start, $.syntax_argument),
        repeat(alias($._syn_arguments_region, $.syntax_argument)),
        optional(
          seq(
            alias($._syn_region_skip, $.syntax_argument),
            repeat(alias($._syn_arguments_region, $.syntax_argument))
          )
        ),
        // Can have multiple end
        repeat1(
          seq(
            alias($._syn_region_end, $.syntax_argument),
            repeat(alias($._syn_arguments_region, $.syntax_argument))
          )
        )
      ),

    _syn_cluster: ($) =>
      sub_cmd(
        "cluster",
        $.hl_group,
        repeat(alias($._syn_arguments_cluster, $.syntax_argument))
      ),

    _syn_include: ($) =>
      sub_cmd(
        "include",
        // Here we can't have pattern and `@` is mandatory
        optional(field("grouplist", seq("@", $.hl_group))),
        $.filename
      ),

    // :h syn-sync
    _syn_sync: ($) =>
      sub_cmd(
        "sync",
        choice(
          syn_sync_method(
            "linebreaks",
            token.immediate("="),
            field("val", token.immediate(/[0-9]+/))
          ),
          syn_sync_method("fromstart"),
          syn_sync_method(
            "ccomment",
            optional($.hl_group),
            repeat($._syn_sync_lines)
          ),
          syn_sync_method(
            choice("lines", "minlines", "maxlines"),
            token.immediate("="),
            field("val", token.immediate(/[0-9]+/))
          ),
          syn_sync_method(
            choice("match", "region"),
            $.hl_group,
            optional(seq(choice("grouphere", "groupthere"), $.hl_group)),
            $.pattern
          ),
          syn_sync_method(
            "linecont",
            repeat($._syn_sync_lines),
            $.pattern,
            repeat($._syn_sync_lines)
          ),
          syn_sync_method("clear", optional($.hl_group))
        )
      ),

    _syn_list: ($) => sub_cmd("list", optional(maybe_at($, $.hl_group))),

    _syn_clear: ($) => sub_cmd("clear", optional(maybe_at($, $.hl_group))),

    syntax_statement: ($) =>
      command(
        $,
        "syntax",
        // `:syntax` = `:syntax list`
        optional(
          choice(
            $._syn_enable,
            $._syn_case,
            $._syn_spell,
            $._syn_foldlevel,
            $._syn_iskeyword,
            $._syn_conceal,
            $._syn_keyword,
            $._syn_match,
            $._syn_region,
            $._syn_cluster,
            $._syn_include,
            $._syn_sync,
            $._syn_list,
            $._syn_clear
          )
        )
      ),

    // :h sign

    _expression: ($) =>
      choice(
        $._variable,
        $.ternary_expression,
        $.index_expression,
        $.slice_expression,
        $.binary_operation,
        seq("(", $._expression, ")"),
        $.unary_operation,
        $.field_expression,
        $.call_expression
      ),

    integer_literal: ($) =>
      token(
        seq(
          optional(/[-+]/),
          choice(
            seq(choice("0x", "0X"), /[A-Fa-f0-9]+/),
            seq(choice("0", "0"), /[0-7]+/),
            seq(choice("0b", "0B"), /[0-1]+/),
            /[0-9]+/
          )
        )
      ),

    list: ($) => seq("[", commaSep($._expression), optional(","), "]"),
    // Trailing commas are not allowed in assignments, but `; <ident>` are
    list_assignment: ($) =>
      seq("[", commaSep($._expression), optional(seq(";", $._expression)), "]"),

    index_expression: ($) =>
      prec(
        PREC.CALL,
        seq(
          field("value", $._expression),
          "[",
          field("index", $._expression),
          "]"
        )
      ),

    slice_expression: ($) =>
      prec(
        PREC.CALL,
        seq(
          field("value", $._expression),
          "[",
          optional(field("start", $._expression)),
          ":",
          optional(field("stop", $._expression)),
          "]"
        )
      ),

    call_expression: ($) =>
      prec(
        PREC.CALL,
        seq(
          field("function", $._expression),
          "(",
          optional(commaSep1($._expression)),
          ")"
        )
      ),

    // Use default :h isfname
    filename: ($) =>
      seq(
        // First character of a filename is not immediate
        choice(
          /[A-Za-z0-9]/,
          /[/._+,#$%~=-]/,
          // Include windows characters
          /[\\{}\[\]:@!]/,
          // Allow wildcard
          /[*]/,
          // Escaped character
          seq("\\", /./)
        ),
        repeat(
          choice(
            ...[
              /[A-Za-z0-9]/,
              /[/._+,#$%~=-]/,
              // Include windows characters
              /[\\{}\[\]:@!]/,
              // Allow wildcard
              /[*]/,
              // Escaped character
              seq("\\", /./),
            ].map(token.immediate)
          )
        )
      ),

    // :h pattern
    pattern_multi: ($) =>
      choice("*", /\\[+=?]/, /\\@[!>=]|<[=!]/, /\\\{-?[0-9]*,?[0-9]*}/),

    _pattern_branch: ($) => sep1($._pattern_concat, "\\&"),

    pattern: ($) => prec.left(sep1($._pattern_branch, "\\|")),

    env_variable: ($) => seq("$", $.identifier),

    // :h registers
