corpus/unlet_statement.txt
================================================================================
Unlet identifier
================================================================================

unlet foo
unlet g:foo
unlet foo bar
unlet foo bar
unlet Foo Bar
unlet g:foo g:bar Foo

--------------------------------------------------------------------------------

(script_file
  (unlet_statement
    (identifier))
  (unlet_statement
    (scoped_identifier
      (scope)
      (identifier)))
  (unlet_statement
    (identifier)
    (identifier))
  (unlet_statement
    (identifier)
    (identifier))
  (unlet_statement
    (identifier)
    (identifier))
  (unlet_statement
    (scoped_identifier
      (scope)
      (identifier))
    (scoped_identifier
      (scope)
      (identifier))
    (identifier)))

================================================================================
Unlet expression
================================================================================

unlet list[3]
unlet list[3:]
unlet g:list[3]
unlet dict['two']
unlet g:dict['two']
unlet dict.two
unlet g:dict.two
unlet g:dict.two dict['three']

--------------------------------------------------------------------------------

(script_file
  (unlet_statement
    (index_expression
      (identifier)
      (integer_literal)))
  (unlet_statement
    (slice_expression
      (identifier)
      (integer_literal)))
  (unlet_statement
    (index_expression
      (scoped_identifier
        (scope)
        (identifier))
      (integer_literal)))
  (unlet_statement
    (index_expression
      (identifier)
      (string_literal)))
  (unlet_statement
    (index_expression
      (scoped_identifier
        (scope)
        (identifier))
      (string_literal)))
  (unlet_statement
    (field
      (identifier)
      (identifier)))
  (unlet_statement
    (scoped_identifier
      (scope)
      (field
        (identifier)
        (identifier))))
  (unlet_statement
    (scoped_identifier
      (scope)
      (field
        (identifier)
        (identifier)))
    (index_expression
      (identifier)
      (string_literal))))

================================================================================
Unlet envar
================================================================================

unlet $FOO
unlet $FOO $BAR

--------------------------------------------------------------------------------

(script_file
  (unlet_statement
    (env_variable
      (identifier)))
  (unlet_statement
    (env_variable
      (identifier))
    (env_variable
      (identifier))))
