test/corpus/const_statement.txt
================================================================================
Const global
================================================================================

const g:foo = 1

--------------------------------------------------------------------------------

(script_file
  (const_statement
    (scoped_identifier
      (scope)
      (identifier))
    (integer_literal)))


================================================================================
Const destructuring
================================================================================

const [a, b; rest] = ["aval", "bval", 1, 2]
const [fleh, b, c] = [1, 2, 3]

--------------------------------------------------------------------------------

(script_file
  (const_statement
    (list_assignment
      (identifier)
      (identifier)
      (identifier))
    (list
      (string_literal)
      (string_literal)
      (integer_literal)
      (integer_literal)))
  (const_statement
    (list_assignment
      (identifier)
      (identifier)
      (identifier))
    (list
      (integer_literal)
      (integer_literal)
      (integer_literal))))

================================================================================
Const heredoc
================================================================================

const [first; rest] =<< trim END
  if ok
    echo 'done'
  endif
END

--------------------------------------------------------------------------------

(script_file
  (const_statement
    (list_assignment
      (identifier)
      (identifier))
    (heredoc
      (body
        (chunk)
        (chunk)
        (chunk)))))
