test/corpus/embedded_langs.txt
================================================================================
Lua chunk
================================================================================


lua vim.api.nvim_command('echo "Hello, Nvim!"')

--------------------------------------------------------------------------------

(script_file
  (lua_statement
    (chunk)))

================================================================================
Lua script
================================================================================


lua << EOF
local linenr = vim.api.nvim_win_get_cursor(0)[1]
local curline = vim.api.nvim_buf_get_lines(
        0, linenr, linenr + 1, false)[1]
print(string.format("Current line [%d] has %d bytes",
            linenr, #curline))
EOF


lua << EOF
require("nvim-autopairs").setup()
EOF

--------------------------------------------------------------------------------

(script_file
  (lua_statement
    (script
      (chunk)
      (chunk)
      (chunk)
      (chunk)
      (chunk)))
  (lua_statement
    (script
      (chunk))))

================================================================================
Python chunk
================================================================================

python print("foo")

--------------------------------------------------------------------------------

(script_file
  (python_statement
    (chunk)))

================================================================================
Perl chunk
================================================================================

perl abdc

--------------------------------------------------------------------------------

(script_file
  (perl_statement
    (chunk)))

================================================================================
Ruby chunk
================================================================================

ruby fobarbaz

--------------------------------------------------------------------------------

(script_file
  (ruby_statement
    (chunk)))
