test/corpus/filetype_statement.txt
================================================================================
Filtypes
================================================================================

filetype on
filetype off
filetype plugin on
filetype plugin off
filetype indent on
filetype indent off
filetype plugin indent on
filetype plugin indent off

--------------------------------------------------------------------------------

(script_file
  (filetype_statement
    (state))
  (filetype_statement
    (state))
  (filetype_statement
    (state))
  (filetype_statement
    (state))
  (filetype_statement
    (state))
  (filetype_statement
    (state))
  (filetype_statement
    (state))
  (filetype_statement
    (state)))
